    cryptdisks is run at boot time. Second, timeout is a non-essential
    debian package, and not neccecarily installed. The usage of
    /usr/bin/timeout in any case is only a temporary workaround.
  * move /usr/share/cryptsetup to /lib/cryptsetup, as the checks need to be
    available at boot time, before local filesystems (like i.e. /usr) are
    mounted.

 -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 17:20:18 +0100

cryptsetup (2:1.0.1-15) unstable; urgency=low

  [ Jonas Meurer ]
  * rebuilt with -sa, to include the sources into upload

 -- Jonas Meurer <mejo@debian.org>  Fri, 27 Jan 2006 18:18:46 +0100

cryptsetup (2:1.0.1-14) unstable; urgency=low

  [ Jonas Meurer ]
  * added a configurable timeout option for interactive password
    prompt. set the default timeout to 180 seconds in
    /etc/default/cryptdisks, and documented the crypttab option in
    the crypttab manpage. (closes: #328961)
  * fixed the default "precheck" and "postcheck" options, currently
    no useful precheck exists, so no default here.
  * removed the dummy cryptsetup-luks package, ftpmaster complains
    about it.

  [ Michael Gebetsroither ]
  * make small fixes to CryptoSwap.HowTo
  * added postcheck for swap (closes: #342079)

 -- Jonas Meurer <mejo@debian.org>  Fri, 27 Jan 2006 12:59:10 +0100

cryptsetup (2:1.0.1-13) unstable; urgency=low

  * split the "check" in a "precheck" and a "postcheck" option
    - adds the possibility to check the source device before creating the
      decrypted target device, useful for things like swap.

 -- Jonas Meurer <mejo@debian.org>  Sun, 22 Jan 2006 21:24:06 +0100

cryptsetup (2:1.0.1-12) unstable; urgency=low

  * correctly parse options in cryptdisks (closes: #304399)
  * remove the moduledir /usr/lib/cryptsetup from the deb, it's
    empty anyway (closes: #334648)
  * replace /usr/local/bin/delay with /bin/sleep in usbcrypto.mkinitrd
  * cosmetical changes to /etc/crypttab
  * add "check" and "retry" options to cryptdisks script,