@@ -14,8 +14,10 @@ cryptsetup (2:1.0.1-16) unstable; urgency=low
   * move /usr/share/cryptsetup to /lib/cryptsetup, as the checks need to be
     available at boot time, before local filesystems (like i.e. /usr) are
     mounted.
+  * install init.d script and default file with dh_installinit
+    (closes: #350548)
 
- -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 17:20:18 +0100
+ -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 17:38:54 +0100
 
 cryptsetup (2:1.0.1-15) unstable; urgency=low
 
